--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,4 @@
 3. Better protocol (non-POJO-based)
 4. Channel permissions
 5. Proper accounts, using a MySQL-database (optional)
+6. Split into Server, Client and common
